<resources>
    <string name="app_name">MyTennisRank</string>
    <string name="action_settings">Settings</string>

    <string name="text_bilan">Bilan</string>
    <string name="text_rank">Classement</string>
    <string name="text_name">Nom</string>
    <string name="text_VE2I5G">V-E-2I-5G</string>
    <string name="text_bonus">Bonus</string>
    <string name="text_points">Points</string>
    <string name="text_victory">Victoire</string>
    <string name="text_defeat">Défaite</string>
    <string name="text_victory_into_account">Victoire PEC</string>

    <string name="text_button_valid">Valider</string>
    <string name="text_button_cancel">Annuler</string>

    <string name="text_item_new_profil">Nouveau profil</string>
    <string name="text_item_modify_profil">Modifier profil</string>
    <string name="text_item_save_profil">Sauvegarder profil</string>
    <string name="text_item_load_profil">Charger</string>
    <string name="text_item_delete_profil">Supprimer profil</string>
    <string name="text_item_demo_profil">Profil demo</string>
    <string name="text_item_email_profil">Exporter par mail</string>
    <string name="title_activity_main_activity_v2">MainActivityV2</string>
    <string name="title_activity_calcul_details">Détails du calcul</string>

</resources>
