<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorUda"
    android:padding="10dp">

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        style="@style/ListTextView"
        android:text="@string/text_rank"/>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        style="@style/ListTextView"
        android:text="@string/text_name"/>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        style="@style/ListTextView"
        android:text="@string/text_points"/>

</LinearLayout>