<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ihm.CalculDetailsActivity"
            android:weightSum="1"
            android:background="@color/colorUda">


        <!-- Details calcul -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Détails du calcul"
            android:id="@+id/textViewTitleDetailCalcul"
            android:textColor="@color/white"
            />

        <!-- Partie Bilan -->

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="horizontal"
            android:background="@drawable/bordershadow"
            android:padding="10dp">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight=".50">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/text_rank"
                    android:id="@+id/textViewClassement"
                    android:textColor="@color/textColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Nbre Victoire :"
                    android:id="@+id/textViewVictoire"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/textColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Nbre Défaite :"
                    android:id="@+id/textViewDefaite"
                    android:textColor="@color/textColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="V-E-2I-5G : "
                    android:id="@+id/textViewDelta"
                    android:textColor="@color/textColor" />

            </LinearLayout>

            <!--  2eme colonne-->

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight=".5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Nombre PEC :"
                    android:id="@+id/textViewPEC"
                    android:textColor="@color/textColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/text_points"
                    android:id="@+id/textViewPts"
                    android:textColor="@color/textColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/text_bonus"
                    android:id="@+id/textViewBonus"
                    android:textColor="@color/textColor" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Total (requis) : "
                    android:id="@+id/textViewTotal"
                    android:textColor="@color/textColor" />

            </LinearLayout>

        </LinearLayout>

        <!-- les matchs avec les points rapporté -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Bilan "
            android:id="@+id/textViewBilan"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/white"
            android:padding="5dp" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/listViewMatch"
            android:layout_weight="0.6"
            android:background="@android:color/white" />


    </LinearLayout>
</ScrollView>